--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:pages": "ng build --base-href /sandbox-angular-leaflet-osm/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
